disabled-apps/hello/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 2 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: crccheck/hello-world:v1.0.0
          ports:
            - containerPort: 8000
