disabled-apps/hello/hello-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello
spec:
  routes:
    - match: Host(`hello.ieeetamu.org`)
      kind: Rule
      services:
        - name: hello
          port: 8000
      middlewares: # apply the favicon since the container doesnt have one
        - name: traefik-helper-favicon
          namespace: traefik-helper
